--- a/requirements.txt
+++ b/requirements.txt
@@ -37,7 +37,7 @@ patsy==0.5.3
 Pillow==10.1.0
 platformdirs==3.11.0
 plotly==5.17.0
-psycopg-binary==3.1.12
+psycopg2-binary==2.9.9
 pyparsing==3.1.1
 pyproj==3.6.1
 python-dateutil==2.8.2
